--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # headers and icon 
-title: khang nguyen
+title: omertugrul
 info: phd cs @ uta
-icon-pic: assets/img/mandu_icon.png
+icon-pic: assets/img/Llama-scaled.jpeg
 
 # exclude these items when generated website in _site/index.html
 exclude:
