--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # headers and icon 
 title: omertugrul
-info: BsC EEE @ Bilkent
+info: BSc EEE @ Bilkent
 icon-pic: assets/img/Llama-scaled.jpeg
 
 # exclude these items when generated website in _site/index.html
