--- a/_data/updates.yaml
+++ b/_data/updates.yaml
@@ -1,5 +1,6 @@
 updates:
 
-  - picture: assets/img/updates_gan/databoss.jpg
+  - title: New Internship
+    picture: assets/img/updates_gan/databoss.jpg
     desc: I am happy to share that I started NLP Engineer Intern @ Databoss A.Ş.
     time: July 2024
